[project]
name = "agentic-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wajidminhas", email = "shanitent667@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.19",
]

[project.scripts]
agentic-work = "agentic_work:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
